application/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - host: myapp.drbh.com
  - http:
      paths:
      - path: /
        backend:
          serviceName: flask-service
          servicePort: 8081
